--- a/Instructions/Starter_Code/time_series_analysis.ipynb
+++ b/Instructions/Starter_Code/time_series_analysis.ipynb
@@ -849,6 +849,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Based on your time series analysis, would you buy the yen now?\n",
+    "- no\n",
+    "Is the risk of the yen expected to increase or decrease?\n",
+    "- increase\n",
+    "Based on the model evaluation, would you feel confident in using these models for trading?\n",
+    "- yes"
+   ]
   }
  ],
  "metadata": {
